--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode=production",
+    "build": "rimraf -rf ./docs && webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +36,7 @@
     "declaration-bundler-webpack-plugin": "1.0.3",
     "html-webpack-plugin": "5.5.3",
     "mini-css-extract-plugin": "2.7.6",
+    "rimraf": "5.0.5",
     "ts-loader": "9.5.1",
     "typescript": "5.3.2",
     "webpack": "5.89.0",
