--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rxdb-quickstart",
   "version": "0.0.0",
-  "description": "A simple todo app to learn about RxDB",
+  "description": "A simple local-first p2p todo app to learn about RxDB",
   "private": true,
   "scripts": {
     "dev": "webpack serve",
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/pubkey/rxdb-quickstart#readme",
   "dependencies": {
     "process": "0.11.10",
-    "rxdb": "15.0.0-beta.41",
+    "rxdb": "15.0.0-beta.42",
     "rxjs": "7.8.1",
     "todomvc-app-css": "2.4.3"
   },
